
* New command ``bzr dpush`` that can push changes to foreign 
  branches (svn, git) without setting custom bzr-specific metadata.
  (Jelmer Vernooij)

Improvements
************

* ``--coverage`` works for code running in threads too.
  (Andrew Bennets, Vincent Ladeuil)

Bug Fixes
*********

* Adding now works properly when path contains a symbolic link.
  (Geoff Bache, #183831)

* ``bzr merge --weave`` will now generate a conflict if one side deletes a
  line, and the other side modifies the line. (John Arbash Meinel, #328171)

* ``bzr send`` works to send emails again using MAPI.
  (Neil Martinsen-Burrell, #346998)

* Check for missing parent inventories in StreamSink.  This prevents
  incomplete stacked branches being created by 1.13 bzr:// and
  bzr+ssh:// clients (which have bug #354036).  Instead, the server now
  causes those clients to send the missing records.  (Andrew Bennetts)

* End-Of-Line content filters are now loaded correctly.
  (Ian Clatworthy, Brian de Alwis, #355280)

* Fix a bug in the pure-python ``GroupCompress`` code when handling copies
  longer than 64KiB. (John Arbash Meinel, #364900)

* Fix TypeError in running ``bzr break-lock`` on some URLs.
  (Alexander Belchenko, Martin Pool, #365891)

* Non-recursive ``bzr ls`` now works properly when a path is specified.
  (Jelmer Vernooij, #357863)

* ssh usernames (defined in ~/.ssh/config) are honoured for bzr+ssh connections.
  (Vincent Ladeuil, #367726)

* Several bugs related to unicode symlinks have been fixed and the test suite
  enhanced to better catch regressions for them. (Vincent Ladeuil)

* Upgrading to, or fetching into a 'rich-root' format will now correctly
  set the root data the same way that reconcile does.
  (Robert Collins, #368921)

Documentation
*************

API Changes
***********

* ``InterPackRepo.fetch`` and ``RepoFetcher`` now raise ``NoSuchRevision``
  instead of ``InstallFailed`` when they detect a missing revision.