@@ -17,6 +17,11 @@
 """Tests for eol conversion."""
 
 
+from bzrlib import (
+    errors,
+    rules,
+    )
+from bzrlib.filters import _get_filter_stack_for
 from bzrlib.filters.eol import (
     _to_crlf_converter,
     _to_lf_converter,
@@ -37,3 +42,27 @@ class TestEolFilters(TestCase):
     def test_to_crlf(self):
         result = _to_crlf_converter([_sample_file1])
         self.assertEqual(["hello\r\nworld\r\n"], result)
+
+
+class TestEolRulesSpecifications(TestCase):
+
+    def test_exact_value(self):
+        """'eol = exact' should have no content filters"""
+        prefs = (('eol','exact'),)
+        self.assertEqual([], _get_filter_stack_for(prefs))
+
+    def test_other_known_values(self):
+        """These known eol values have corresponding filters."""
+        known_values = ('lf', 'crlf', 'native',
+            'native-with-crlf-in-repo', 'lf-with-crlf-in-repo',
+            'crlf-with-crlf-in-repo')
+        for value in known_values:
+            prefs = (('eol',value),)
+            self.assertNotEqual([], _get_filter_stack_for(prefs))
+
+    def test_unknown_value(self):
+        """
+        Unknown eol values should raise an error.
+        """
+        prefs = (('eol','unknown-value'),)
+        self.assertRaises(errors.BzrError, _get_filter_stack_for,  prefs)
